--- a/scss/overrides/_bootstrap.scss
+++ b/scss/overrides/_bootstrap.scss
@@ -18,66 +18,27 @@
 }
 
 // buttons
+.bcbb-theme {
+  .btn-primary {
+    --bs-btn-color: #{($colorWhite)};
+    --bs-btn-bg: #{($colorAccent-primary)};
+    --bs-btn-border-color: #{(mix($colorBlack,$colorAccent-primary, 20%))};
+    --bs-btn-hover-color: #{($colorWhite)};
+    --bs-btn-hover-bg: #{(mix($colorBlack,$colorAccent-primary, 10%))};
+   // --bs-btn-hover-border-color: mix($colorBlack,$colorBrand-primary, 30%);
+    --bs-btn-focus-shadow-rgb: 38, 89, 206;
+    --bs-btn-active-color: #{($colorWhite)};
+    --bs-btn-active-bg: #00309e;
+    --bs-btn-active-border-color: #{(mix($colorBlack,$colorAccent-primary, 20%))};
+    --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
+   // --bs-btn-disabled-color: #{($colorWhite)};
+    --bs-btn-disabled-bg: #{(mix($colorBlack,$colorAccent-primary, 70%))};
+    //#{(mix($colorWhite,$colorAccent-primary, 5%))};
+    --bs-btn-disabled-border-color: #{(mix($colorBlack,$colorAccent-primary, 85%))};
+  }
 
-.btn-primary {
-  --bs-btn-color: #{($colorWhite)};
-  --bs-btn-bg: #{($colorBrand-primary)};
-  --bs-btn-border-color: #{(mix($colorBlack,$colorBrand-primary, 20%))};
-  --bs-btn-hover-color: #{($colorWhite)};
-  --bs-btn-hover-bg: #{(mix($colorBlack,$colorBrand-primary, 10%))};
- // --bs-btn-hover-border-color: mix($colorBlack,$colorBrand-primary, 30%);
-  --bs-btn-focus-shadow-rgb: 38, 89, 206;
-  --bs-btn-active-color: #{($colorWhite)};
-  --bs-btn-active-bg: #00309e;
-  --bs-btn-active-border-color: #{(mix($colorBlack,$colorBrand-primary, 20%))};;
-  --bs-btn-active-shadow: inset 0 px-em(3px) px-em(5px) rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #{($colorWhite)};
-  --bs-btn-disabled-bg: #003CC5;
-  --bs-btn-disabled-border-color: #003CC5;
-}
-
-//solid
-
-
-.btn-primary{
-
-}
-
-.btn-secondary{
-
-  
-}
-
-.btn-danger{
-}
-
-.btn-warning{
+  input[type=checkbox] {
+    border-color: $colorInputBorder;
+  }
 
 }
-
-.btn-success{
-
-}
-
-.btn-info{
-
-}
-
-.btn-light{}
-
-.btn-dark{}
-
-//outline
-.btn-outline-secondary{}
-
-.btn-outline-success{}
-
-.btn-outline-danger{}
-
-.btn-outline-warning{}
-
-.btn-outline-info{}
-
-.btn-outline-light{}
-
-.btn-outline-dark{}
