--- a/templates/navigation/book-navigation.html.twig
+++ b/templates/navigation/book-navigation.html.twig
@@ -33,7 +33,7 @@
  */
 #}
 {% if tree or has_links %}
-  <nav role="navigation">
+  <nav role="navigation" class="book-navigation">
     {{ tree }}
     {% if has_links %}
       <ul aria-label="{{ 'Document navigation'|t }}">
