--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,7 +35,8 @@
   './components/alerts',
   './components/badges',
   './components/search',
-  './components/lists';
+  './components/lists',
+  './components/subway';
 
 // #################################
 // DEV STYLES: disable in production
