--- a/css/style.css
+++ b/css/style.css
@@ -25181,8 +25181,42 @@ ul.bcbb-inline-list li:not(:last-child):after {
   content: " | ";
 }
 
-.bb-subway {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Ccircle cx='50' cy='50' r='49' stroke='%2300ff00' stroke-width='3px' fill='%230000ff' /%3E%3C/svg%3E");
+ul.bb-subway {
+  padding-left: 0;
+  list-style: none;
+}
+ul.bb-subway ul {
+  list-style: none;
+  padding-left: 0;
+}
+ul.bb-subway li {
+  position: relative;
+  background-color: rgba(232, 123, 232, 0.3);
+  padding-left: 1.25em;
+}
+ul.bb-subway li a {
+  display: block;
+  padding-bottom: 0.5em;
+  background-color: rgba(232, 123, 232, 0.3);
+}
+ul.bb-subway li a::before {
+  position: absolute;
+  top: 0.25em;
+  margin-left: -1.25em;
+  border: 2px solid black;
+  background: yellow;
+  content: " ";
+  border-radius: 50%;
+  width: 1em;
+  height: 1em;
+}
+ul.bb-subway > li {
+  padding-left: 2em;
+}
+
+li {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_2' data-name='Layer 2' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000 '%3E%3Cg id='corner'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%23ff0000' stroke-miterlimit='10' stroke-width='10'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
 }
 
 html.bcbb-theme .navbar-brand a.site-title {
