--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -21692,7 +21692,14 @@ a > .ck-content code {
 .ck-content ul.bb-subway li {
   position: relative;
   background-color: rgba(232, 123, 232, 0.3);
-  padding-left: 1.25em;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_x' data-name='border_x' xmlns='http://www.w3.org/2000/svg' width='20' height='10' viewBox='0 0 20 10'%3E%3Cline id='border_h' x1='20' y1='1' y2='1' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 0, 0 0.7em;
+}
+.ck-content ul.bb-subway li:only-child {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_x' data-name='border_x' xmlns='http://www.w3.org/2000/svg' width='20' height='10' viewBox='0 0 20 10'%3E%3Cline id='border_h' x1='20' y1='1' y2='1' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 0 0.73em !important;
 }
 .ck-content ul.bb-subway li a {
   display: block;
@@ -21703,19 +21710,54 @@ a > .ck-content code {
   position: absolute;
   top: 0.25em;
   margin-left: -1.25em;
-  border: 2px solid black;
-  background: yellow;
+  border: 2px solid #38598a;
+  background: #fff;
   content: " ";
   border-radius: 50%;
   width: 1em;
   height: 1em;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.ck-content ul.bb-subway li a:hover::before, .ck-content ul.bb-subway li a:focus::before, .ck-content ul.bb-subway li a:active::before,
+.ck-content ul.bb-subway li a .active::before,
+.ck-content ul.bb-subway li a .media-library-view--widget .view-header a.is-active::before,
+.ck-content .media-library-view--widget .view-header ul.bb-subway li a a.is-active::before {
+  -webkit-transform: scale(1.15, 1.15);
+          transform: scale(1.15, 1.15);
+  background: #38598a;
+}
+.ck-content ul.bb-subway li ul {
+  position: relative;
+}
+.ck-content ul.bb-subway li ul::before {
+  width: 0.75em;
+  height: 2em;
+  content: " ";
+  position: absolute;
+  background: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner-bl' data-name='corner-bl' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 1em 1em'%3E%3Cg id='corner'%3E%3Cpath id='corner-bl' d='m1,0v7.33c0,1.48,1.19,2.67,2.67,2.67h7.33' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: top 1.3em left 0em, bottom 0.5em left 0em;
+  top: -1em;
+  z-index: -1;
+  left: -0.75em;
+}
+.ck-content ul.bb-subway li ul li {
+  padding-left: 1.65em;
+}
+.ck-content ul.bb-subway li ul li:first-child {
+  background-position: 0 0.76em, 0 0.7em;
 }
 .ck-content ul.bb-subway > li {
-  padding-left: 2em;
+  padding-left: 1.75em;
 }
-.ck-content li {
-  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_2' data-name='Layer 2' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000 '%3E%3Cg id='corner'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%23ff0000' stroke-miterlimit='10' stroke-width='10'/%3E%3C/g%3E%3C/svg%3E");
-  background-repeat: no-repeat;
+.ck-content ul.bb-subway > li:first-child {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner_tl' data-name='corner-tl' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 1em 1m'%3E%3Cg id='corner'%3E%3Cpath id='corner-tl' d='m1,11V3.67c0-1.48,1.19-2.67,2.67-2.67h7.33' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E");
+  background-position: 0 0.67em, 0 1em;
+}
+.ck-content ul.bb-subway > li:last-child {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner-bl' data-name='corner-bl' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 1em 1em'%3E%3Cg id='corner'%3E%3Cpath id='corner-bl' d='m1,0v7.33c0,1.48,1.19,2.67,2.67,2.67h7.33' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E");
+  background-position: bottom 0.95em left 0, bottom 1.5em left 0;
 }
 .ck-content html.bcbb-theme .navbar-brand a.site-title {
   color: #fff;
