--- a/scss/components/_subway.scss
+++ b/scss/components/_subway.scss
@@ -8,16 +8,19 @@ $color-dev: rgba(232, 123, 232, 0.3);
   @return '%23' + str-slice('#{$color}', 2);
 }
 
-$stroke_width: 10;
-$stroke_color: #ff0000;
+$stroke_width: 2px;
+$stroke_color: $colorAccent-primary;
+$fill_color: $colorWhite;
 
-$border-x:"data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_2' data-name='Layer 2' xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cg id='corner'%3E%3Cline id='line-h' x1='10' y1='1' y2='1' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
+//$border-x:"data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_x data-name='Border x' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 10 10'%3E%3Cg id='corner'%3E%3Cline id='line-h' x1='10' y1='1' y2='1' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
 
-$border-y: "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_2' data-name='Layer 2' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000 '%3E%3Cg id='corner'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
+$border-x: "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_x' data-name='border_x' xmlns='http://www.w3.org/2000/svg' width='20' height='10' viewBox='0 0 20 10'%3E%3Cline id='border_h' x1='20' y1='1' y2='1' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/svg%3E";
 
-$border-corner-tl: "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Layer_2' data-name='corner-tl' xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cg id='corner'%3E%3Cpath id='corner-tl' d='m1,11V3.67c0-1.48,1.19-2.67,2.67-2.67h7.33' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
+$border-y: "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
 
-$border-corner-bl: "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner-bl' data-name='corner-bl' xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cg id='corner'%3E%3Cpath id='corner-bl' d='m1,0v7.33c0,1.48,1.19,2.67,2.67,2.67h7.33' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
+$border-corner-tl: "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner_tl' data-name='corner-tl' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 1em 1m'%3E%3Cg id='corner'%3E%3Cpath id='corner-tl' d='m1,11V3.67c0-1.48,1.19-2.67,2.67-2.67h7.33' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
+
+$border-corner-bl: "data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner-bl' data-name='corner-bl' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 1em 1em'%3E%3Cg id='corner'%3E%3Cpath id='corner-bl' d='m1,0v7.33c0,1.48,1.19,2.67,2.67,2.67h7.33' fill='none' stroke='#{svg-color($stroke_color)}' stroke-miterlimit='10' stroke-width='#{$stroke_width}'/%3E%3C/g%3E%3C/svg%3E";
 
 ul.bb-subway {
   padding-left: 0;
@@ -29,34 +32,80 @@ ul.bb-subway {
   li {
     position: relative;
     background-color: $color-dev;
-    padding-left: 1.25em;
+
+    background-image: url($border-y), url($border-x);
+    background-repeat: no-repeat;
+    background-position: 0, 0 .7em;
+    &:only-child {
+      background-image: url($border-x);
+      background-repeat: no-repeat;
+      background-position: 0 .73em !important;
+
+    }
     a {
       display: block;
       padding-bottom: .5em;
+      //position: relative;
       background-color: $color-dev;
       &::before {
         position: absolute;
         top: .25em;
         margin-left: -1.25em;
-        border: 2px solid black;
-        background: yellow;
+        border: $stroke_width solid $stroke_color;
+        background: $fill_color;
         //content: '\25CF';
         content: ' ';
         border-radius: 50%;
         width: 1em;
         height: 1em;
+        //transition: width .2s ease-in-out, height .2s ease-in-out, margin-left .2s ease-in-out, top .2s ease-in-out, color .2s ease-in-out;
+        transition: all .3s ease-in-out;
+      }
+      &:hover,
+      &:focus,
+      &:active,
+      .active {
+        &::before {
+          //width: 1.1em;
+         // height: 1.1em;
+         transform: scale(1.15,1.15);
+          background: $stroke_color;
+        }       
+      }
+    }
+    ul {position: relative;
+      &::before {
+        width: .75em;
+        height: 2em;
+        content: ' ';
+        position: absolute;
+        background: url($border-corner-bl), url($border-y);
+        background-repeat: no-repeat;
+        background-position: top 1.3em left 0em, bottom .5em left 0em;
+        top: -1em;
+        z-index: -1;
+        left: -.75em;
+      }
+      li {
+        &:first-child {
+          background-position: 0 .76em, 0 .7em;
+        }
+        padding-left: 1.65em;
       }
     }
   }
+
   &>li {
-    padding-left: 2em;
+    padding-left: 1.75em;
+    &:first-child {
+      background-image: url($border-corner-tl), url($border-y);
+      background-position: 0 .67em, 0 1em;
+
+    }
+    &:last-child {
+      background-image: url($border-corner-bl), url($border-y);
+      background-position: bottom .95em left 0, bottom 1.5em left 0;
+    }
   }
 }
 
-
-
-li {
-  background-image: url($border-y);
-  background-repeat: no-repeat;
- // background-position: 0em 10px; /* Adjust the vertical starting position */
-}
