--- a/css/style.css
+++ b/css/style.css
@@ -25191,20 +25191,11 @@ ul.bb-subway ul {
 }
 ul.bb-subway li {
   position: relative;
-  background-color: rgba(232, 123, 232, 0.3);
-  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_x' data-name='border_x' xmlns='http://www.w3.org/2000/svg' width='20' height='10' viewBox='0 0 20 10'%3E%3Cline id='border_h' x1='20' y1='1' y2='1' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: 0, 0 0.7em;
-}
-ul.bb-subway li:only-child {
-  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_x' data-name='border_x' xmlns='http://www.w3.org/2000/svg' width='20' height='10' viewBox='0 0 20 10'%3E%3Cline id='border_h' x1='20' y1='1' y2='1' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: 0 0.73em !important;
+  padding-left: 0.75em;
 }
 ul.bb-subway li a {
   display: block;
   padding-bottom: 0.5em;
-  background-color: rgba(232, 123, 232, 0.3);
 }
 ul.bb-subway li a::before {
   position: absolute;
@@ -25212,43 +25203,30 @@ ul.bb-subway li a::before {
   margin-left: -1.25em;
   border: 2px solid #38598a;
   background: #fff;
+  overflow: hidden;
   content: " ";
   border-radius: 50%;
   width: 1em;
   height: 1em;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
 }
 ul.bb-subway li a:hover::before, ul.bb-subway li a:focus::before, ul.bb-subway li a:active::before,
 ul.bb-subway li a .active::before,
 ul.bb-subway li a .media-library-view--widget .view-header a.is-active::before,
 .media-library-view--widget .view-header ul.bb-subway li a a.is-active::before {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -webkit-transform: scale(1.15, 1.15);
           transform: scale(1.15, 1.15);
+  border-radius: 50%;
   background: #38598a;
 }
-ul.bb-subway li ul {
-  position: relative;
-}
-ul.bb-subway li ul::before {
-  width: 0.75em;
-  height: 2em;
-  content: " ";
-  position: absolute;
-  background: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner-bl' data-name='corner-bl' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 1em 1em'%3E%3Cg id='corner'%3E%3Cpath id='corner-bl' d='m1,0v7.33c0,1.48,1.19,2.67,2.67,2.67h7.33' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: top 1.3em left 0em, bottom 0.5em left 0em;
-  top: -1em;
-  z-index: -1;
-  left: -0.75em;
-}
-ul.bb-subway li ul li {
-  padding-left: 1.65em;
-}
-ul.bb-subway li ul li:first-child {
-  background-position: 0 0.76em, 0 0.7em;
+ul.bb-subway li > ul {
+  padding-bottom: 1.5em;
 }
 ul.bb-subway > li {
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_x' data-name='border_x' xmlns='http://www.w3.org/2000/svg' width='20' height='10' viewBox='0 0 20 10'%3E%3Cline id='border_h' x1='20' y1='1' y2='1' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 0, 0 0.7em;
   padding-left: 1.75em;
 }
 ul.bb-subway > li:first-child {
@@ -25258,6 +25236,14 @@ ul.bb-subway > li:first-child {
 ul.bb-subway > li:last-child {
   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='corner-bl' data-name='corner-bl' xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 1em 1em'%3E%3Cg id='corner'%3E%3Cpath id='corner-bl' d='m1,0v7.33c0,1.48,1.19,2.67,2.67,2.67h7.33' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E"), url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='border_y' data-name='border y' xmlns='http://www.w3.org/2000/svg' width='10' height='10000' viewBox='0 0 10 10000'%3E%3Cg id='border_y'%3E%3Cline id='line-v' x1='1' x2='1' y2='10000' fill='none' stroke='%2338598a' stroke-miterlimit='10' stroke-width='2px'/%3E%3C/g%3E%3C/svg%3E");
   background-position: bottom 0.95em left 0, bottom 1.5em left 0;
+}
+ul.bb-subway li > ul > li a::before {
+  width: 0.75em;
+  height: 0.75em;
+}
+ul.bb-subway li > ul > li li a::before {
+  width: 0.5em;
+  height: 0.5em;
 }
 
 html.bcbb-theme .navbar-brand a.site-title {
