--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,8 @@
   './components/badges',
   './components/search',
   './components/lists',
-  './components/subway';
+  './components/subway',
+  './components/nav_book';
 
 // #################################
 // DEV STYLES: disable in production
