--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -21745,6 +21745,30 @@ a > .ck-content code {
   width: 0.5em;
   height: 0.5em;
 }
+.ck-content .book-navigation {
+  border-top: 1px solid #fcba19;
+  margin: 1.5em 0 0;
+  padding: 1.5em 0;
+}
+.ck-content ul.bb-nav-book {
+  padding: 0;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media only screen and (min-width: 576px) {
+  .ck-content .block-book-navigation {
+    margin-top: 3.5em;
+  }
+}
 .ck-content html.bcbb-theme .navbar-brand a.site-title {
   color: #fff;
   text-decoration: none;
